resolved scrollbar error

--- a/app/src/Folders.css
+++ b/app/src/Folders.css
@@ -6,3 +6,7 @@
     height: available;
     overflow: scroll;
 }
+
+.folders::-webkit-scrollbar {
+    display: none;
+}
